# libiio

./: .clang-format  .clangformatignore  .cmakeformatignore  .codespell-ignore.txt  .git-blame-ignore-revs  .gitignore  .gitmodules  .prospector.yml  .pylintrc  .travis.yml  .vale.ini  99-iiod-hotplug.rules  Android.mk  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING_MIT.txt  Contributors.md  Distribution.xml.cmakein  Doxyfile  Doxyfile.in  JenkinsfileHWMATLAB  LinuxPackaging.cmake  Makefile  README.md  README_BUILD.md  README_DEVELOPERS.md  annotated.html  appveyor.yml  artifact_manifest.txt.cmakein  attr.c  attr.h  azure-pipelines-coverity.yml  azure-pipelines.yml  backend.c  block.c  buffer.c  catalog-info.yaml  channel.c  classes.html  (+307 more)
bindings/: CMakeLists.txt
bindings/cpp/: CMakeLists.txt  iio.hpp  iiopp.h
bindings/cpp/examples/: iiopp-enum.cpp
bindings/csharp/: .gitignore  AssemblyInfo.cs.in  Attr.cs  Block.cs  CMakeLists.txt  Channel.cs  ChannelsMask.cs  Context.cs  Device.cs  Doxyfile.in  EventStream.cs  IIOEvent.cs  IOBuffer.cs  IioLib.cs  Scan.cs  ScanContext.cs  Stream.cs  Trigger.cs  UTF8Marshaler.cs  key.snk  libiio-sharp.dll.config.cmakein  libiio-sharp.pc.cmakein  mainpage.dox
bindings/csharp/examples/: BackendsScanWithBlocks.cs  CMakeLists.txt  ExampleIIOEvent.cs  ExampleProgram.cs  PlutoExample.cs
bindings/csharp/tests/: CMakeLists.txt  DllCollector.ps1  IntegrationTests.cs  README.md  SmokeTests.cs  TestFramework.cs
bindings/matlab/: CMakeLists.txt  attribute.m  block.m  buffer.m  channel.m  common.m  context.m  device.m  event.m  helpers.m  hwmon.m  iio-wrapper.h  iio_installer_script.m  iio_sys_obj.m  iio_sys_obj_matlab.m  libiio_if.m  libiio_if_daq2.m  lowlevel.m  scan.m  stream.m  toplevel.m
bindings/matlab/codegen/: genlibiioAPI.m  iioContextGetVersionInfo.m  iioReadChannelAttributeDouble.m  iioReadDevAttrLonglong.m  iioWriteChannelAttributeDouble.m  iioWriteChannelAttributeLonglong.m  iioWriteDevAttrLonglong.m
bindings/matlab/examples/: ad9361_iiostream.m
bindings/matlab/test/: TestContext.m  checkIIOEMU.m  emu_manager.py  generateThunkFiles.m  pluto.xml  runTests.m  testChannelAttributes.m  testContext.m  testDeviceAttributes.m  testLoadLibrary.m
bindings/python/: .gitignore  CMakeLists.txt  README.md  iio.py  pyproject.toml  requirements_test.txt  setup.py  setup.py.cmakein
bindings/python/doc/: .gitignore  buffer_stream.rst  channel.rst  conf.py.in  device.rst  examples.rst  iio_attr.rst  iio_info.rst  iio_readdev.rst  iio_writedev.rst  index.rst  tools.rst
bindings/python/examples/: ad9361_iiostream.py  iio_attr.py  iio_info.py  iio_readdev.py  iio_writedev.py  iioxml.py
bindings/python/iio/: __init__.py
bindings/python/pylibiio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bindings/python/tests/: tests_ad9361.py
examples/: .gitignore  CMakeLists.txt  Makefile  README.md  ad57xx-iiostream.c  ad9361-iiostream.c  ad9363-sha.c  ad9371-iiostream.c  adrv9002-iioblock.c  adrv9002-iiostream.c  adrv9009-iiostream.c  adxl372-iiobuffer.c  dummy-iiostream.c  iio-monitor.c  iio_adi_xflow_check.c  iiostream-common.c  iiostream-common.h  test.py
examples/vita49_2/: command_sequence.c  continuous_stream.c  simulator.c  sine_wave.c
iiod/: .gitignore  CMakeLists.txt  Makefile  debug.h  dns-sd.c  dns-sd.h  iiod.c  iiod.sh  interpreter.c  lexer.l  network.c  ops.c  ops.h  parser.y  queue.h  responder.c  rw.c  serial.c  thread-pool.c  thread-pool.h  usb-dmabuf.c  usbd.c
iiod/init/: iiod.conf  iiod.conf.cmakein  iiod.init  iiod.init.cmakein  iiod.service  iiod.service.cmakein  iiod_create_ini  iiod_setup_gadgetfs
iiod/vita49_2/: README.md  vita49_2_backend.c  vita49_2_backend.h  vita49_2_client.c  vita49_2_client.h  vita49_2_host.c  vita49_2_host.h  vita49_2_iiod_helpers.c  vita49_2_iiod_helpers.h  vita49_2_udp_receive.c  vrt_command.c  vrt_command.h
iiod/vita49_2/libraries/: CMakeLists.txt  ad9361.c  gain.c  tdd_calibration.c  tdd_setup.c
man/: CMakeLists.txt  README.md  iio_adi_xflow_check.1.in  iio_attr.1  iio_attr.1.in  iio_common_cmds.1  iio_common_cmds.var  iio_common_footer.1  iio_common_footer.var  iio_common_opts.1  iio_genxml.1.in  iio_info.1  iio_info.1.in  iio_ping.1.in  iio_readdev.1  iio_readdev.1.in  iio_reg.1  iio_reg.1.in  iio_rwdev.1.in  iio_stresstest.1.in  iio_writedev.1  iio_writedev.1.in  iiod.1.in  libiio.3  make_man  make_man.sh  make_man.sh.in  make_util_pages.sh  update_man
tests/: .gitignore  CMakeLists.txt  Makefile  README.md  gen_code.c  gen_code.h  iio-monitor.c  iio_adi_xflow_check.c  iio_attr.c  iio_common.c  iio_common.h  iio_genxml.c  iio_info.c  iio_readdev.c  iio_reg.c  iio_rwdev.c  iio_stresstest.c  iio_writedev.c  test_helpers.h  test_invariant_man_to_rst.py
tests/api/: CMakeLists.txt  README.md  run_all_api_tests.c  test_attr.c  test_buffer.c  test_channel.c  test_context.c  test_device.c  test_error_handling.c  test_events.c  test_framework.h  test_hwmon.c  test_iio_attr_gencode.c  test_lowlevel.c  test_scan.c  test_toplevel.c  test_typed_attr.c  test_v.c  test_vita49_2_packets.c  vita49_2_simulator.c  vrt_simulator.c
tests/api/vita49_2/: README.md  command_sequence.c  (+4 more)
tests/hardware/: CMakeLists.txt  README.md  test_ad9364.c  test_buffers.c
tests/python/: Makefile  requirements_dev.txt  test_iio_attr.py
tests/standalone/: CMakeLists.txt  test_backends.c  test_scan.c  test_version.c
tests/xml-emu/: CMakeLists.txt  test_context.c
tinyiiod/: CMakeLists.txt  tinyiiod.c  tinyiiod.h
utils/: CMakeLists.txt  gen_code.c  gen_code.h  iio_attr.c  iio_common.c  iio_common.h  iio_event.c  iio_genxml.c  iio_info.c  iio_ping.c  iio_reg.c  iio_rwdev.c  iio_stresstest.c
vita49_2/: CMakeLists.txt  README.md  test.c  vita49.c  vita49_2_packet_elements.c  vita49_2_packet_elements.h  vita49_2_packet_types.c  vita49_2_packet_types.h  vita49_packet.c
zephyr/: CMakeLists.txt  Kconfig  backend.c  libiio_log.c  module.yml
zephyr/drivers/: CMakeLists.txt  Kconfig
zephyr/iiod/: CMakeLists.txt  Kconfig  network.c  uart.c
zephyr/include/: iio-config.h  iio_device.h
(+3455 files in other folders)
